--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,13 @@
 {
   "name": "splitfire-agency/laravel-paybox",
-  "description": "Laravel 8 Paybox",
+  "description": "Laravel 9 Paybox",
+  "type": "library",
   "require": {
-    "php": ">=7.4",
-    "laravel/framework": "^8.0",
-    "lib-openssl": "*",
-    "guzzlehttp/guzzle": "^7.0.1"
+    "php": ">=8.0",
+    "laravel/framework": "^8.0|^9.0",
+    "ext-openssl": "*",
+    "ext-dom": "*",
+    "guzzlehttp/guzzle": ">=5.3"
   },
   "autoload": {
     "psr-4": {
@@ -17,23 +19,22 @@
       "Tests\\": "tests"
     }
   },
-  "license": "MIT",  
+  "license": "MIT",
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "phpunit/phpunit": "^9.3",
-    "mockery/mockery": "^1.3.1",
-    "ext-dom": "*",
-    "ext-openssl": "*"
+    "phpunit/phpunit": "^9.5.20",
+    "mockery/mockery": "^1.4.0",
+    "orchestra/testbench": "^7.5"
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "1.x-dev"
-    },
     "laravel": {
       "providers": [
         "Sf\\Paybox\\Providers\\PayboxServiceProvider"
       ]
     }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   }
 }
