--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
       "Tests\\": "tests"
     }
   },
-  "license": "MIT",  
+  "license": "MIT",
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
@@ -32,7 +32,7 @@
     },
     "laravel": {
       "providers": [
-        "Sf\\Paybox\\Providers\\PayboxServiceProvider"
+        "Sf\\PayboxGateway\\Providers\\PayboxServiceProvider"
       ]
     }
   }
