--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "laravel/framework": "^8.0|^9.0|^10.0",
     "ext-openssl": "*",
     "ext-dom": "*",
+    "ext-libxml": "*",
     "guzzlehttp/guzzle": ">=5.3"
   },
   "autoload": {
@@ -25,7 +26,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5.20",
     "mockery/mockery": "^1.4.0",
-    "orchestra/testbench": "^7.5"
+    "orchestra/testbench": "^7.5",
   },
   "extra": {
     "laravel": {
