--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5.20",
     "mockery/mockery": "^1.4.0",
-    "orchestra/testbench": "^7.5",
+    "orchestra/testbench": "^7.5"
   },
   "extra": {
     "laravel": {
