--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "require": {
     "php": ">=8.0",
-    "laravel/framework": "^8.0|^9.0|^10.0",
+    "laravel/framework": "^8.0|^9.0|^10.0|^11.0",
     "ext-openssl": "*",
     "ext-dom": "*",
     "ext-libxml": "*",
